V7/vezba07/code-gen/micko.output
Grammar

    0 $accept: program $end

    1 program: global_list function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 function: type _ID $@1 _LPAREN parameter _RPAREN body

    6 type: _TYPE

    7 parameter: %empty
    8          | type _ID

    9 $@2: %empty

   10 body: _LBRACKET variable_list $@2 statement_list _RBRACKET

   11 variable_list: %empty
   12              | variable_list variable

   13 variable: type _ID _SEMICOLON

   14 global_list: %empty
   15            | global_list glob_var

   16 glob_var: type _ID _SEMICOLON

   17 statement_list: %empty
   18               | statement_list statement

   19 statement: compound_statement
   20          | assignment_statement
   21          | if_statement
   22          | return_statement

   23 compound_statement: _LBRACKET statement_list _RBRACKET

   24 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   25 num_exp: exp
   26        | num_exp _AROP exp

   27 exp: literal
   28    | _ID
   29    | function_call
   30    | _LPAREN num_exp _RPAREN

   31 literal: _INT_NUMBER
   32        | _UINT_NUMBER

   33 $@3: %empty

   34 function_call: _ID $@3 _LPAREN argument _RPAREN

   35 argument: %empty
   36         | num_exp

   37 if_statement: if_part
   38             | if_part _ELSE statement

   39 @4: %empty

   40 $@5: %empty

   41 if_part: _IF _LPAREN @4 rel_exp $@5 _RPAREN statement

   42 rel_exp: num_exp _RELOP num_exp

   43 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 6
_IF (259) 41
_ELSE (260) 38
_RETURN (261) 43
_ID (262) 5 8 13 16 24 28 34
_INT_NUMBER (263) 31
_UINT_NUMBER (264) 32
_LPAREN (265) 5 30 34 41
_RPAREN (266) 5 30 34 41
_LBRACKET (267) 10 23
_RBRACKET (268) 10 23
_ASSIGN (269) 24
_SEMICOLON (270) 13 16 24 43
_AROP (271) 26
_RELOP (272) 42
ONLY_IF (273)


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
program (20)
    on left: 1, on right: 0
function_list (21)
    on left: 2 3, on right: 1 3
function (22)
    on left: 5, on right: 2 3
$@1 (23)
    on left: 4, on right: 5
type (24)
    on left: 6, on right: 5 8 13 16
parameter (25)
    on left: 7 8, on right: 5
body (26)
    on left: 10, on right: 5
$@2 (27)
    on left: 9, on right: 10
variable_list (28)
    on left: 11 12, on right: 10 12
variable (29)
    on left: 13, on right: 12
global_list (30)
    on left: 14 15, on right: 1 15
glob_var (31)
    on left: 16, on right: 15
statement_list (32)
    on left: 17 18, on right: 10 18 23
statement (33)
    on left: 19 20 21 22, on right: 18 38 41
compound_statement (34)
    on left: 23, on right: 19
assignment_statement (35)
    on left: 24, on right: 20
num_exp (36)
    on left: 25 26, on right: 24 26 30 36 42 43
exp (37)
    on left: 27 28 29 30, on right: 25 26
literal (38)
    on left: 31 32, on right: 27
function_call (39)
    on left: 34, on right: 29
$@3 (40)
    on left: 33, on right: 34
argument (41)
    on left: 35 36, on right: 34
if_statement (42)
    on left: 37 38, on right: 21
if_part (43)
    on left: 41, on right: 37 38
@4 (44)
    on left: 39, on right: 41
$@5 (45)
    on left: 40, on right: 41
rel_exp (46)
    on left: 42, on right: 41
return_statement (47)
    on left: 43, on right: 22


State 0

    0 $accept: . program $end

    $default  reduce using rule 14 (global_list)

    program      go to state 1
    global_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: global_list . function_list
   15 global_list: global_list . glob_var

    _TYPE  shift, and go to state 4

    function_list  go to state 5
    function       go to state 6
    type           go to state 7
    glob_var       go to state 8


State 3

    0 $accept: program $end .

    $default  accept


State 4

    6 type: _TYPE .

    $default  reduce using rule 6 (type)


State 5

    1 program: global_list function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 4

    $default  reduce using rule 1 (program)

    function  go to state 9
    type      go to state 10


State 6

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 7

    5 function: type . _ID $@1 _LPAREN parameter _RPAREN body
   16 glob_var: type . _ID _SEMICOLON

    _ID  shift, and go to state 11


State 8

   15 global_list: global_list glob_var .

    $default  reduce using rule 15 (global_list)


State 9

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 10

    5 function: type . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 12


State 11

    5 function: type _ID . $@1 _LPAREN parameter _RPAREN body
   16 glob_var: type _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 13

    $default  reduce using rule 4 ($@1)

    $@1  go to state 14


State 12

    5 function: type _ID . $@1 _LPAREN parameter _RPAREN body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 14


State 13

   16 glob_var: type _ID _SEMICOLON .

    $default  reduce using rule 16 (glob_var)


State 14

    5 function: type _ID $@1 . _LPAREN parameter _RPAREN body

    _LPAREN  shift, and go to state 15


State 15

    5 function: type _ID $@1 _LPAREN . parameter _RPAREN body

    _TYPE  shift, and go to state 4

    $default  reduce using rule 7 (parameter)

    type       go to state 16
    parameter  go to state 17


State 16

    8 parameter: type . _ID

    _ID  shift, and go to state 18


State 17

    5 function: type _ID $@1 _LPAREN parameter . _RPAREN body

    _RPAREN  shift, and go to state 19


State 18

    8 parameter: type _ID .

    $default  reduce using rule 8 (parameter)


State 19

    5 function: type _ID $@1 _LPAREN parameter _RPAREN . body

    _LBRACKET  shift, and go to state 20

    body  go to state 21


State 20

   10 body: _LBRACKET . variable_list $@2 statement_list _RBRACKET

    $default  reduce using rule 11 (variable_list)

    variable_list  go to state 22


State 21

    5 function: type _ID $@1 _LPAREN parameter _RPAREN body .

    $default  reduce using rule 5 (function)


State 22

   10 body: _LBRACKET variable_list . $@2 statement_list _RBRACKET
   12 variable_list: variable_list . variable

    _TYPE  shift, and go to state 4

    $default  reduce using rule 9 ($@2)

    type      go to state 23
    $@2       go to state 24
    variable  go to state 25


State 23

   13 variable: type . _ID _SEMICOLON

    _ID  shift, and go to state 26


State 24

   10 body: _LBRACKET variable_list $@2 . statement_list _RBRACKET

    $default  reduce using rule 17 (statement_list)

    statement_list  go to state 27


State 25

   12 variable_list: variable_list variable .

    $default  reduce using rule 12 (variable_list)


State 26

   13 variable: type _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 28


State 27

   10 body: _LBRACKET variable_list $@2 statement_list . _RBRACKET
   18 statement_list: statement_list . statement

    _IF        shift, and go to state 29
    _RETURN    shift, and go to state 30
    _ID        shift, and go to state 31
    _LBRACKET  shift, and go to state 32
    _RBRACKET  shift, and go to state 33

    statement             go to state 34
    compound_statement    go to state 35
    assignment_statement  go to state 36
    if_statement          go to state 37
    if_part               go to state 38
    return_statement      go to state 39


State 28

   13 variable: type _ID _SEMICOLON .

    $default  reduce using rule 13 (variable)


State 29

   41 if_part: _IF . _LPAREN @4 rel_exp $@5 _RPAREN statement

    _LPAREN  shift, and go to state 40


State 30

   43 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    num_exp        go to state 45
    exp            go to state 46
    literal        go to state 47
    function_call  go to state 48


State 31

   24 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 49


State 32

   23 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 17 (statement_list)

    statement_list  go to state 50


State 33

   10 body: _LBRACKET variable_list $@2 statement_list _RBRACKET .

    $default  reduce using rule 10 (body)


State 34

   18 statement_list: statement_list statement .

    $default  reduce using rule 18 (statement_list)


State 35

   19 statement: compound_statement .

    $default  reduce using rule 19 (statement)


State 36

   20 statement: assignment_statement .

    $default  reduce using rule 20 (statement)


State 37

   21 statement: if_statement .

    $default  reduce using rule 21 (statement)


State 38

   37 if_statement: if_part .
   38             | if_part . _ELSE statement

    _ELSE  shift, and go to state 51

    $default  reduce using rule 37 (if_statement)


State 39

   22 statement: return_statement .

    $default  reduce using rule 22 (statement)


State 40

   41 if_part: _IF _LPAREN . @4 rel_exp $@5 _RPAREN statement

    $default  reduce using rule 39 (@4)

    @4  go to state 52


State 41

   28 exp: _ID .
   34 function_call: _ID . $@3 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 33 ($@3)
    $default  reduce using rule 28 (exp)

    $@3  go to state 53


State 42

   31 literal: _INT_NUMBER .

    $default  reduce using rule 31 (literal)


State 43

   32 literal: _UINT_NUMBER .

    $default  reduce using rule 32 (literal)


State 44

   30 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    num_exp        go to state 54
    exp            go to state 46
    literal        go to state 47
    function_call  go to state 48


State 45

   26 num_exp: num_exp . _AROP exp
   43 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 55
    _AROP       shift, and go to state 56


State 46

   25 num_exp: exp .

    $default  reduce using rule 25 (num_exp)


State 47

   27 exp: literal .

    $default  reduce using rule 27 (exp)


State 48

   29 exp: function_call .

    $default  reduce using rule 29 (exp)


State 49

   24 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    num_exp        go to state 57
    exp            go to state 46
    literal        go to state 47
    function_call  go to state 48


State 50

   18 statement_list: statement_list . statement
   23 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 29
    _RETURN    shift, and go to state 30
    _ID        shift, and go to state 31
    _LBRACKET  shift, and go to state 32
    _RBRACKET  shift, and go to state 58

    statement             go to state 34
    compound_statement    go to state 35
    assignment_statement  go to state 36
    if_statement          go to state 37
    if_part               go to state 38
    return_statement      go to state 39


State 51

   38 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 29
    _RETURN    shift, and go to state 30
    _ID        shift, and go to state 31
    _LBRACKET  shift, and go to state 32

    statement             go to state 59
    compound_statement    go to state 35
    assignment_statement  go to state 36
    if_statement          go to state 37
    if_part               go to state 38
    return_statement      go to state 39


State 52

   41 if_part: _IF _LPAREN @4 . rel_exp $@5 _RPAREN statement

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    num_exp        go to state 60
    exp            go to state 46
    literal        go to state 47
    function_call  go to state 48
    rel_exp        go to state 61


State 53

   34 function_call: _ID $@3 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 62


State 54

   26 num_exp: num_exp . _AROP exp
   30 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 63
    _AROP    shift, and go to state 56


State 55

   43 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 43 (return_statement)


State 56

   26 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    exp            go to state 64
    literal        go to state 47
    function_call  go to state 48


State 57

   24 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   26 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 65
    _AROP       shift, and go to state 56


State 58

   23 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 23 (compound_statement)


State 59

   38 if_statement: if_part _ELSE statement .

    $default  reduce using rule 38 (if_statement)


State 60

   26 num_exp: num_exp . _AROP exp
   42 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 56
    _RELOP  shift, and go to state 66


State 61

   41 if_part: _IF _LPAREN @4 rel_exp . $@5 _RPAREN statement

    $default  reduce using rule 40 ($@5)

    $@5  go to state 67


State 62

   34 function_call: _ID $@3 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    $default  reduce using rule 35 (argument)

    num_exp        go to state 68
    exp            go to state 46
    literal        go to state 47
    function_call  go to state 48
    argument       go to state 69


State 63

   30 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 30 (exp)


State 64

   26 num_exp: num_exp _AROP exp .

    $default  reduce using rule 26 (num_exp)


State 65

   24 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 24 (assignment_statement)


State 66

   42 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    num_exp        go to state 70
    exp            go to state 46
    literal        go to state 47
    function_call  go to state 48


State 67

   41 if_part: _IF _LPAREN @4 rel_exp $@5 . _RPAREN statement

    _RPAREN  shift, and go to state 71


State 68

   26 num_exp: num_exp . _AROP exp
   36 argument: num_exp .

    _AROP  shift, and go to state 56

    $default  reduce using rule 36 (argument)


State 69

   34 function_call: _ID $@3 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 72


State 70

   26 num_exp: num_exp . _AROP exp
   42 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 56

    $default  reduce using rule 42 (rel_exp)


State 71

   41 if_part: _IF _LPAREN @4 rel_exp $@5 _RPAREN . statement

    _IF        shift, and go to state 29
    _RETURN    shift, and go to state 30
    _ID        shift, and go to state 31
    _LBRACKET  shift, and go to state 32

    statement             go to state 73
    compound_statement    go to state 35
    assignment_statement  go to state 36
    if_statement          go to state 37
    if_part               go to state 38
    return_statement      go to state 39


State 72

   34 function_call: _ID $@3 _LPAREN argument _RPAREN .

    $default  reduce using rule 34 (function_call)


State 73

   41 if_part: _IF _LPAREN @4 rel_exp $@5 _RPAREN statement .

    $default  reduce using rule 41 (if_part)
